# incident-timeline-builder

./: README.md  pyproject.toml
.github/workflows/: ci.yml
cli/: main.py
correlators/: five_whys.py  incidents.py  summary.py  timeline.py
docs/: architecture.md  cli-reference.md  grouping-and-correlation.md  postmortem-template.md  reproduction-guide.md  source-cloudwatch.md  source-github-actions.md  source-slack.md
examples/: README.md  events.csv  events.json
examples/aws-doctor-bundle/: bundle-manifest.json  diagnosis.json
examples/multi-incident/: README.md  events.csv  slack-incident.json
examples/payments-incident/: README.md  cloudwatch-alarms.json  events.csv  events.json  github-actions-runs.json  slack-incident.json
normalizers/: timestamps.py
parsers/: sources.py
reporters/: renderers.py
tests/: test_cli.py  test_correlator.py  test_parsers.py
